modified searchUsers
